Agregado el hover del portafolio
Tambien se agrego al gitignore el ds_store de la raiz

--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
 	<div class="container-row">
 		<div class="twelve column styles-grid centro">
 			<div class="container-row">
-				<div class="three column margen-foto"><img src="img/4.jpg" alt="Proyecto" class="card-foto"></div>
-				<div class="three column margen-foto"><img src="img/3.jpg" alt="Proyecto" class="card-foto"></div>
-				<div class="three column margen-foto"><img src="img/2.jpg" alt="Proyecto" class="card-foto"></div>
-				<div class="three column margen-foto"><img src="img/1.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/4.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/3.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/2.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/1.jpg" alt="Proyecto" class="card-foto"></div>
+			</div>
+			<div class="container-row">
+				<div class="three column margen-foto hover"><img src="img/1.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/2.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/3.jpg" alt="Proyecto" class="card-foto"></div>
+				<div class="three column margen-foto hover"><img src="img/4.jpg" alt="Proyecto" class="card-foto"></div>
 			</div>
 		</div>
 	</div>
